--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "next": "^10.0.0",
     "next-query-params": "*",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "eslint-config-molindo": "5.0.1",
+    "eslint": "7.4.0"
   }
 }
