--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "example",
-  "version": "0.1.0",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "next": "^10.0.0",
-    "next-query-params": "*",
+    "next-query-params": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "eslint-config-molindo": "5.0.1",
-    "eslint": "7.4.0"
+    "eslint": "7.4.0",
+    "eslint-config-molindo": "5.0.1"
   }
 }
