--- a/packages/next-query-params/package.json
+++ b/packages/next-query-params/package.json
@@ -36,6 +36,9 @@
     "next": "^10.0.0 || ^11.0.0",
     "react": "^16.8.0 || ^17.0.0"
   },
+  "dependencies": {
+    "use-query-params": "1.2.3"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "11.0.0",
     "@types/react": "^16.9.56",
@@ -47,7 +50,6 @@
     "react-dom": "^17.0.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
-    "typescript": "^4.1.2",
-    "use-query-params": "1.2.3"
+    "typescript": "^4.1.2"
   }
 }
