--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
   "version": "2.0.3",
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "useWorkspaces": true,
   "npmClient": "yarn",
   "command": {
