--- a/packages/next-query-params/package.json
+++ b/packages/next-query-params/package.json
@@ -33,7 +33,7 @@
     "dist"
   ],
   "peerDependencies": {
-    "next": "^10.0.0 || ^11.0.0",
+    "next": "^10.0.0 || ^11.0.0 || ^12.0.0",
     "react": "^16.8.0 || ^17.0.0"
   },
   "dependencies": {
@@ -44,7 +44,7 @@
     "@types/react": "^16.9.56",
     "eslint": "7.4.0",
     "eslint-config-molindo": "5.0.1",
-    "next": "^10.0.0",
+    "next": "^12.0.0",
     "query-string": "7.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
