--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -10,13 +10,14 @@
     "test": "echo \"No tests yet\""
   },
   "dependencies": {
-    "next": "^10.0.0",
+    "next": "^12.0.0",
     "next-query-params": "^2.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "eslint": "7.4.0",
-    "eslint-config-molindo": "5.0.1"
+    "eslint-config-molindo": "5.0.1",
+    "typescript": "4.5.4"
   }
 }
