ci: Setup Cypress

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     name: Build, lint, and test
     runs-on: ubuntu-latest
+    container: cypress/browsers:node14.17.0-chrome91-ff89
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -14,5 +15,5 @@ jobs:
       - uses: bahmutov/npm-install@v1
       - run: yarn workspace next-query-params run build
       - run: yarn workspaces run lint
-      - run: yarn workspaces run test --ci --maxWorkers=2
       - run: yarn workspace example run build
+      - run: yarn workspaces run test --ci --maxWorkers=2
