--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src && tsc --noEmit",
-    "test": "start-server-and-test start http://localhost:3000 \"cypress run\""
+    "test": "start-server-and-test \"yarn start\" http://localhost:3000 \"cypress run\""
   },
   "dependencies": {
     "next": "^12.0.0",
