--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: cypress-io/github-action@v2
         with:
-          start: yarn start
-          build: yarn workspace next-query-params run build && yarn workspace example run build
+          start: yarn build && yarn start
+          build: yarn workspace next-query-params run build
+          wait-on: 'http://localhost:3000'
           working-directory: packages/example
