--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src && tsc --noEmit",
-    "test": "echo \"No tests yet\""
+    "test": "start-server-and-test \"yarn start\" http://localhost:3000 \"cypress run\""
   },
   "dependencies": {
     "next": "^12.0.0",
@@ -16,8 +16,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "cypress": "9.1.1",
     "eslint": "7.4.0",
     "eslint-config-molindo": "5.0.1",
+    "start-server-and-test": "1.14.0",
     "typescript": "4.5.4"
   }
 }
