--- a/packages/next-query-params/package.json
+++ b/packages/next-query-params/package.json
@@ -34,22 +34,21 @@
   ],
   "peerDependencies": {
     "next": "^10.0.0 || ^11.0.0 || ^12.0.0",
-    "react": "^16.8.0 || ^17.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
+    "query-string": "7.1.1",
+    "tslib": "^2.0.3",
     "use-query-params": "1.2.3"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "11.0.0",
-    "@types/react": "^16.9.56",
+    "@types/react": "^18.0.5",
     "eslint": "7.4.0",
     "eslint-config-molindo": "5.0.1",
-    "next": "^12.0.0",
-    "query-string": "7.0.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "next": "^12.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "tsdx": "^0.14.1",
-    "tslib": "^2.0.3",
     "typescript": "^4.1.2"
   }
 }
