--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -10,10 +10,10 @@
     "test": "start-server-and-test \"yarn start\" http://localhost:3000 \"cypress run\""
   },
   "dependencies": {
-    "next": "^12.0.0",
-    "next-query-params": "^2.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^12.1.5",
+    "next-query-params": "*",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "cypress": "9.1.1",
