--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -13,7 +13,8 @@
     "next": "^12.1.5",
     "next-query-params": "^3.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "use-query-params": "2.0.0"
   },
   "devDependencies": {
     "cypress": "9.1.1",
