--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "publish": "lerna publish --yes --no-verify-access"
+    "publish": "lerna publish --yes --no-verify-access",
+    "prerelease": "lerna publish prerelease --yes --no-verify-access --dist-tag next --no-changelog --no-git-tag-version"
   },
   "workspaces": [
     "packages/*"
