--- a/packages/next-query-params/package.json
+++ b/packages/next-query-params/package.json
@@ -34,12 +34,11 @@
   ],
   "peerDependencies": {
     "next": "^10.0.0 || ^11.0.0 || ^12.0.0",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "use-query-params": "^2.0.0"
   },
   "dependencies": {
-    "query-string": "7.1.1",
-    "tslib": "^2.0.3",
-    "use-query-params": "1.2.3"
+    "tslib": "^2.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.5",
@@ -49,6 +48,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tsdx": "^0.14.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "use-query-params": "2.0.0"
   }
 }
