--- a/packages/next-query-params/package.json
+++ b/packages/next-query-params/package.json
@@ -33,7 +33,7 @@
     "dist"
   ],
   "peerDependencies": {
-    "next": "^10.0.0 || ^11.0.0 || ^12.0.0",
+    "next": "^10.0.0 || ^11.0.0 || ^12.0.0" || "^13.0.0",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "use-query-params": "^2.0.0"
   },
