--- a/packages/next-query-params/tsconfig.json
+++ b/packages/next-query-params/tsconfig.json
@@ -7,7 +7,7 @@
     "declaration": true,
     "sourceMap": true,
     "rootDir": "./src",
-    "outDir": "./dist",
+    "outDir": "./dist/src",
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
